--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,3 +29,5 @@ jobs:
         run: npm run build
       - name: Run my action
         uses: ./
+        with: 
+          name: 'Helenki (from workflow)'
