--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,3 +31,4 @@ jobs:
         uses: ./
         with: 
           name: 'Helenki (from workflow)'
+          githubToken: ${{secrets.GITHUB_TOKEN}}
